# DonCEyKongJr

./: .gitignore  CMakeLists.txt  README.md  SocketsC-bin  main.c
src/: controller.c  controller.h  game.c  game.h  main  main.c  socketClient.h
src/Json/: Entities.c  Entities.h  JsonParser.c  JsonParser.h
src/app/: Interface.c  Interface.glade  Interface.h  game.c  game.h
src/communication/: AddEntities.java  Json.java  JsonClient.java  JsonEntities.java  JsonParser.c  JsonParser.h  ServerSockets.java  communication.c  communication.h  socketClient.c  socketClient.h
src/entities/: Crocodile.java  Crocodiles.java  DonkeyKongJr.java  DonkeyKongJrFac.java  Fruit.java  Fruits.java  VinesHashMap.java
src/main/: Main.java
